---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ????
  Changes:
    - added changelog for 1.0.0
    - added description
    - simplified variable assignment and control logic
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 24OCT2024
  Changes:
    - added support for Factorio 2.0
    - refactored control code
    - renamed color palettes to color themes
    - added additional color themes for pride and country flags
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 01DEC2021
  Changes:
    - added color palettes
    - updated license to CC BY-NC-SA 4.0
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 28NOV2021
  Changes:
    - initial release on mod portal